packages/build/tests/error/monitor/fixtures/fail_plugin/plugin.js
module.exports = {
  onInit({
    utils: {
      build: { failPlugin },
    },
  }) {
    failPlugin('test')
  },
}
